--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -15,18 +15,18 @@
         text-align: center;
     }
     
-    &__tittle {
+    &__title {
         font-weight: 300;
         color: $mainBlue;
-        font-size: 2.4rem;
         margin: 0;
+        font-size: 2.4rem;
 
         @mixin atSmall {
             font-size: 4.8rem;
         }
     }
     
-    &__subtittle {
+    &__subtitle {
         font-weight: 300;
         color: $mainBlue;
         font-size: 1.5rem; 
